--- a/math/geom-test2.tex
+++ b/math/geom-test2.tex
@@ -36,7 +36,7 @@
 
 \item Plot the points $A=(-1, 3)$ and $B=(2, 7)$ and calculate the distance between them.
 
-\item Duplicate the angle shown below in your notebook \textbf{only using a straight edge and a compass}.  You may not use a protractor!
+\item Duplicate the angle shown below in your notebook \textbf{only using a straight edge and a compass}.  You may not use a protractor!  Describe how you did it.
 
 \includegraphics[width=2.5in]{angle-1.png}
 
